# TempConverter

./: LICENSE
app/: build.gradle
app/src/androidTest/java/orbianta/github/basic/tempconverter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  temp_lib.cpp  temp_lib.h
app/src/main/java/orbianta/github/basic/tempconverter/: MainActivity.java  celsius.java  global.java  native_interface.java  splash.java
app/src/main/res/drawable/: card_bg.xml  etxt_usr_bg.xml  ic_launcher_foreground.xml  option_btn_custom.xml
app/src/main/res/layout/: activity_celsius.xml  activity_main.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-v21/: themes.xml
app/src/test/java/orbianta/github/basic/tempconverter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
